# Franka_test_Haochen

./: .gitignore  .gitmodules  README.md  VLM_YOLO_ROS1_INTEGRATION.md
catkin_ws/: frames.gv
catkin_ws/src/klemol_planner/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/klemol_planner/config/: joint_limits.yaml  planner_params.yaml
catkin_ws/src/klemol_planner/klemol_planner/camera_utils/: antipodal_grasp_planner2.py  camera_operations.py  capture_realsense_frame_yolo.py  kalman_filter.py
catkin_ws/src/klemol_planner/klemol_planner/environment/: collision_checker.py  environment_transformations.py  obstacles.py  robot_joint_states_reader.py  robot_model.py
catkin_ws/src/klemol_planner/klemol_planner/goals/: point_with_orientation.py
catkin_ws/src/klemol_planner/klemol_planner/planners/: base.py  nodes.py  prm.py  prm_roadmap_builder.py  rrt.py  rrt_star.py  rrt_with_connecting.py
catkin_ws/src/klemol_planner/launch/: spawn_only_franka.launch  spawn_static_test_environment.launch
catkin_ws/src/klemol_planner/panda_description/: panda.urdf.xacro
catkin_ws/src/klemol_planner/scripts/: 00_final_dynamic_demo.py  00_final_static_demo.py  00_test_calibration.py  approach_from_the_top.py  aruco_corner_debug.py  for_sim_move_franka_klemol_based_on_camera.py  franky_test.py  move_franka_klemol_based_on_camera.py  move_to_corners.py  pick_static_banana_demo.py  please_remove_me.py  plot_tool_poses_for_prm.py  single_test.py  test_camera_scrtipt_marcin.py  vlm_yolo_dynamic_demo.py
catkin_ws/src/klemol_planner/urdf/: table_box.urdf.xacro
(+53 files in other folders)
